# A4 - Auth - Login & protect/src/auth/auth.route.js
@@ -1,10 +1,12 @@
 import { Router } from "express";
 import { authController } from "./auth.controller.js";
+import { tokenVerifier } from "../middleware/index.js";
 
 export const authRouter = Router();
 export const protectedRouter = Router();
 
 authRouter.post("/signup", authController.signup);
 authRouter.post("/login", authController.login);
+authRouter.post("/logout", tokenVerifier, authController.logout);
 
-protectedRouter.get("/profile", authController.profile)
+protectedRouter.get("/profile", tokenVerifier, authController.profile);
